@@ -49,8 +49,16 @@ minute = 60 * second = min
 
 
 @pytest.fixture
-def func_registry():
-    return pint.UnitRegistry()
+def func_registry(request):
+    marker = request.node.get_closest_marker("func_registry_args")
+    print(marker)
+    if marker is None:
+        args = ()
+        kwargs = {}
+    else:
+        args = marker.args
+        kwargs = marker.kwargs
+    return pint.UnitRegistry(*args, **kwargs)
 
 
 @pytest.fixture(scope="class")
